# uimi

./: AUTHORS  CMakeLists.txt  README.md
drivers/: CMakeLists.txt  csv.c  dictdz.c
include/: uimi.h  uimi_log.h
introspection/: uimi.xml
res/: test.csv  test2.csv  uimi.conf
src/: common.h  main.c  uimi_config.c  uimi_config.h  uimi_dbus.c  uimi_dbus.h  uimi_driver.c  uimi_driver.h  uimi_log.c  util.c  util.h
